--- a/t09-1c_test/t09-1c_test.vcxproj.filters
+++ b/t09-1c_test/t09-1c_test.vcxproj.filters
@@ -32,9 +32,6 @@
     <ClCompile Include="unittest1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="UnitTestSearch.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="UnitTestParserNL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -42,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="UnitTestEditP.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UnitTestController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
