--- a/t09-1c_test/t09-1c_test.vcxproj
+++ b/t09-1c_test/t09-1c_test.vcxproj
@@ -88,6 +88,11 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="LogicTestAdd.cpp" />
+    <ClCompile Include="LogicTestComplete.cpp" />
+    <ClCompile Include="LogicTestDelete.cpp" />
+    <ClCompile Include="LogicTestEdit.cpp" />
+    <ClCompile Include="LogicTestTime.cpp" />
     <ClCompile Include="UnitTestEditP.cpp" />
     <ClCompile Include="UnitTestDeleteP.cpp" />
     <ClCompile Include="UnitTestParserNL.cpp" />
